# visual_odom

./: .gitignore  CMakeLists.txt
calibration/: kitti01.yaml  kitti03.yaml  kitti11.yaml  kitti12.yaml  santafe.yaml  urban.yaml
src/: CMakeLists.txt  config.h  feature.cpp  feature.h  main.cpp  stereo_rectifier.cpp  stereo_rectifier.h  utils.cpp  utils.h  visualOdometry.cpp  visualOdometry.h
src/evaluate/: CMakeLists.txt  evaluate_odometry.cpp
src/featureMatching/: CMakeLists.txt  circularMatching.cpp  circularMatching.h  removeOutliers.cpp  removeOutliers.h
src/featureProcessing/: CMakeLists.txt  computeDescriptors.cpp  computeDescriptors.h  filters.cpp  filters.h  nms.cpp  nms.h
